<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        style="@style/MyEditText"
        android:id="@+id/container_enquiry_response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8dp"
        android:orientation="vertical"
        android:theme="@style/MyEditText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_info_enquiry"
            android:padding="4dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:fontFamily="sans-serif"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/name"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:fontFamily="sans-serif"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:fontFamily="sans-serif"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/phone_number"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:fontFamily="sans-serif"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jobs"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:fontFamily="sans-serif"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tv_jobs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/jobs"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:fontFamily="sans-serif"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enquiry_title"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:fontFamily="sans-serif"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tv_title_enquiry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/enquiry_title"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:fontFamily="sans-serif"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enquiry_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:fontFamily="sans-serif"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tv_enquiry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/enquiry_content"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="1.5dp"
            android:textSize="16sp"/>

    </LinearLayout>
</ScrollView>