<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/container_home"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.home.HomeFragment">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="8dp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_new_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:color/white"
                android:fontFamily="@font/roboto_light"
                android:padding="8dp"
                android:paddingBottom="0dp"
                android:text="@string/latest"
                android:visibility="gone"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_categories"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_update_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="8dp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_new_article"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/img_empty_search"
                android:scaleType="centerInside"
                android:src="@drawable/img_empty"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="150dp"
                android:layout_height="150dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_empty_search"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_chainStyle="packed" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/home"/>

            <TextView
                android:id="@+id/tv_empty_search"
                android:fontFamily="@font/roboto_light"
                android:textSize="14sp"
                android:visibility="gone"
                android:textColor="#828282"
                android:text="@string/empty_message"
                app:layout_constraintStart_toStartOf="@+id/img_empty_search"
                app:layout_constraintEnd_toEndOf="@id/img_empty_search"
                android:layout_width="150dp"
                android:layout_height="wrap_content" android:layout_marginStart="@dimen/dimen_16dp"
                android:textAlignment="center" android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_empty_search" app:layout_constraintHorizontal_bias="0.5"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.v4.widget.SwipeRefreshLayout>